[add] 添加集群实体类和创建接口
